k8s/kafka/kafka-network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kafka
  podSelector:
    matchLabels:
      app: kafka
